--- a/index.html
+++ b/index.html
@@ -7,14 +7,8 @@
 <form id="frm1" action="/action_page.php">
   <input type="text" name="fname"><br>
   <input type="text" name="lname"><br><br>
-  <input type="button" onclick="myFunction()" value="Submit">
 </form>
-
-<script>
-function myFunction() {
-  document.getElementById("frm1").submit();
-}
-</script>
+  <a href="newpage.html"> Submit Button </a>
 
 </body>
 </html>
