--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 
 <p>Enter names in the fields, then click "Submit" to submit the form:</p>
 
-<form id="frm1" action="/action_page.php">
+<form id="frm1">
   <input type="text" name="fname"><br>
   <input type="text" name="lname"><br><br>
+  <input type="password">
 </form>
   <a href="newpage.html"> Submit Button </a>
 
