--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 <p>Enter names in the fields, then click "Submit" to submit the form:</p>
 
 <form id="frm1">
-  <input type="text" name="fname"><br>
-  <input type="text" name="lname"><br><br>
-  <input type="password">
+  <input type="text" name="fname" placeholder="First Name"><br>
+  <input type="text" name="lname" placeholder="Last Name"><br>
+  <input type="password" placeholder="Password">
 </form>
   <a href="newpage.html"> Submit Button </a>
 
