--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <form id="frm1">
   <input type="text" name="fname" placeholder="First Name"><br>
   <input type="text" name="lname" placeholder="Last Name"><br>
-  <input type="password" placeholder="Password">
+  <input type="password" placeholder="Password"> <br><br>
 </form>
   <a href="newpage.html"> Submit Button </a>
 
