--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-  <u><h1>This is the home page</h1></u>
+  <u><h1 class="title">This is the home page</h1></u>
   <a href="signup.html"> Sign Up Here </a>
 </body>
 </html>
