--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" href="index.css">
 <u><h1 class="title">This is the home page</h1></u>  
   </head>
   
